feat: wip deploy

--- a/apps/docs/pages/cluster.mdx
+++ b/apps/docs/pages/cluster.mdx
@@ -64,6 +64,8 @@ Plotting the Silhouette scores for different numbers of clusters gives us the fo
 
 The x-axis represents the number of clusters, and the y-axis represents the Silhouette score. Using this graph we can see that the Silhouette score is highest for 64 clusters! [^1]
 
+TODO: Problematic because we can't really display 64 clusters in the UI.
+
 [^1]: This is just an example, the actual number of clusters is different and are highly dependent on your data.
 
 ## Clustering
