docs: Added documentation for existing data sources

--- a/apps/docs/pages/data-sources/existing-data-sources.mdx
+++ b/apps/docs/pages/data-sources/existing-data-sources.mdx
@@ -1,1 +1,173 @@
-# Existing Data Sources
+import { Steps } from 'nextra-theme-docs';
+
+# Existing Datasources
+
+There are various databases for funding opportunities, each offering their own advantages. For now, we have selected the three most prominent databases that are available in Germany.
+This page will explain those, assess their respective disadvantages and elaborate how Fun<sub>2</sub>ding can improve the funding landscape.
+
+
+## 1. EU Funding and Tenders Opportunities
+
+The EU Funding and Tenders Opportunities platform is an online portal developed by the European Commission to centralize funding programs issued by the EU.
+While the platform offers its own search engine funding opportunities, it also streamlines the whole application process for those.
+
+### What programmes does the platform provide?
+
+The platform provides programs for wide range of areas. In the following, we aim to categorize those into few categories:
+
+- **Research and Innovation**: Primarily, the platform provides larger scale research and innovation programs.
+- **Regional Development**: Moreover, programs that enhance infrastructure, promote entrepreneurship, support small and medium-sized enterprises (SMEs), and foster job creation in different regions of the European Union can be found.
+- **Education**: Another important area are programs that aim to improve the quality of education systems, promote skills development, and enhance cooperation among educational institutions and stakeholders.
+- **Culture and Creative Industries**: Many programs aim to promote cultural diversity, preserve cultural heritage, support artistic creation, and stimulate innovation in cultural and creative industries.
+- **Environment and Sustainability**: As the EU strives to promote sustainability, various programs address issues such as biodiversity conservation, pollution prevention, renewable energy, circular economy, and climate change mitigation and adaptation.
+- **Infrastructure**: These projects aim to improve transport networks, promote clean and efficient transport systems, and enhance urban planning and infrastructure.
+- **Social and Humanitarian Projects**: Besides the more industrial programs, the EU also provides programs that may focus on areas such as poverty reduction, healthcare access, refugee integration, gender equality, and social innovation.
+
+
+
+### What filters are available?
+
+According to the portal, it is the 'entry point [...] for participants and experts in funding programmes and tenders', implying that it is not aimed at novices to searching funding.
+Appropriately, the filters do not seem straightforward at first glance but are strongly adapted to the portal's programs. 
+Namely, the filters are the following:
+
+- **Programming Period**: Refers to the specific time frame or duration during which a funding program is implemented, indicating the period in which projects can be proposed and funded.
+- **Programme / Programme group**: Programmes include multiple funding opportunities to a specific topic. 
+- **Call**: Represents a specific call for proposals or applications within a funding program, indicating a distinct opportunity for potential applicants to submit their project ideas or initiatives.
+- **Type of grant calls**: Allows the user to filter for calls for proposals or cascade funding calls.
+- **CPV code (Tenders only)**: The CPV (Common Procurement Vocabulary) code filter enables users to search for tenders based on specific categories or types of goods or services being procured.
+- **Places of delivery or performance (Tenders Only)**: Specifies the geographical locations.
+
+### What details does the platform provide about funding opportunities?
+
+The platform offers a wide range of information about funding opportunities. In the following, we will explain all provided details.
+
+- **Programme**: As mentioned below, the programme usually specifies the topic. The name may however not be self-explanatory, e.g. 'HORIZON'.
+- **Call**: A call is a specific call within a funding program.
+- **Type of action**: Describes the eligible activities or projects that can be funded within the opportunity.
+- **Type of MGA (Multi-Grant Agreement)**: Specifies the contractual arrangement that will be established between the funding body and selected applicants.
+- **Deadline Model**: Outlines the rules for proposal submission deadlines, indicating the timing and frequency of deadlines.
+- **Opening Date**: Marks the start date when the funding opportunity becomes accessible and applicants can access application documents.
+- **Deadline Date**: Specifies the final dates by which applicants must submit their proposals, marking the end of the application submission period.
+- **Topic description**: Explains the objective, expected results and description of the activities to be funded.
+- **Topic conditions**: Provides details to the eligibility criterias, deadlines and documents to submit.
+
+### What are the advantages and disadvantages of the platform?
+
+#### Advantages
+The EU Funding and Tenders Opportunities portal offers a wide range of funding opportunities for diverse areas, providing more possibilities than any other platform.
+Most importantly, the portal streamlines the whole process of securing funding from finding the opportunity to getting accepted.
+
+#### Disadvantages
+On the other side, The portal might be hard to understand for beginners and in particular time-consuming to use even for experts. As the provided filters do not allow many options, navigating through the wide range of funding opportunities can be a long endeavor.
+
+
+
+## 2. DAAD Scholarship Database
+
+The DAAD Scholarship Database is an online resource providing funding programs administered by the German Academic Exchange Service (DAAD) to pursue academic studies, research, and professional development in Germany.
+
+### What programmes does the platform provide?
+
+The platform provides programs for individuals in various areas. Those areas are listed below.
+
+- **Study Scholarships**: These scholarships support international students who wish to pursue a full-time degree program at a German university.
+- **Reserach and Doctoral Scholarships**: DAAD offers research grants for individuals, who aim to conduct research or doctorate a German university, research institution, or company.
+- **Language Courses**: The database also provides short-term scholarships for individuals seeking to perform language courses in Germany.
+- **Internships**: Moreover, DAAD offers programs that distribute internships and may supply funding.
+- **Teaching Scholarships**: These scholarships provide funding for individuals seeking to teach.
+
+### What filters are available?
+
+In the DAAD Scholarship Database, some filters are provided.
+
+- **Keyword or programme title**: Filters the results by a specific word.
+- **Programmes for**: Enables the user to search for programs tailored for undergraduates, graduates, PhD students, postdoctoral researchers or faculties
+- **Country**: Lets the user specifiy his country of origin
+- **Subject**: Allows the user to filter for programs for e.g. medicine or engineering.
+- **Intention**: Represents the areas of programs listed above.
+
+### What details does the platform provide about funding opportunities?
+
+The platform offers a wide range of information about funding opportunities. In the following, we will explain all provided details.
+
+- **Objective**: Marks what the program aims to achieve.
+- **Who can apply?**: Outlines the eligibility criteria.
+- **What can be funded?**: Explains for what the programme provides funding and may include multiple options, e.g. a masters degree or one year of study in Germany.
+- **Duration of the funding**: Specifies over which time-span the funding is provided and whether the grant is renewable.
+- **Value**: Describes what the program offers. This may include payments or other support.
+- **Selection**: Outlines the criterias according to which the commitee reviews applications.
+
+### What are the advantages and disadvantages of the platform?
+
+#### Advantages
+Compared to the EU Funding and Tenders Opportunities portal, the DAAD Scholarship Database provides a more intuitive user interface. 
+The programs are clearly structured and the general composition of funding opportunities is more straightforward.
+
+#### Disadvantages
+Although the platform includes intuitive filters, it is yet time-consuming to find matching programs. In particular filtering for keywords rarely leads to satisfactory results.
+This requires to user to read through many programs before finding ones whose eligibility criterias are met.
+
+
+## 3. Förderdatenbank
+
+The Förderdatenbank is an online database that provides information on various funding programs and financial support options available in Germany for businesses, organizations, and individuals.
+
+### What programmes does the platform provide?
+
+The platform provides programs mainly for organizations but also for individuals in the following areas: 
+
+- **Education & Training**: Funding programs supporting education and training initiatives to enhance skills, professional development, and lifelong learning opportunities.
+- **Digitalization**: Initiatives aimed at promoting digital transformation, technological innovation, and digital skills development in businesses and organizations.
+- **Environment and Sustainability**: Funding opportunities for projects focused on energy efficiency measures, renewable energy technologies, and sustainable energy practices.
+- **Entrepreneurhsip and Business Financing**: Support for starting and establishing new businesses, and support for company financing.
+- **Health**: Funding programs addressing health-related projects and healthcare innovation.
+- **Social Affairs**: Support for social welfare initiatives.
+- **Infrastructure**: Initiatives aimed at improving and developing infrastructure systems, including transportation networks, utilities, and urban planning.
+- **Culture, Media & Sports**: Funding opportunities for cultural projects, media initiatives, arts, sports, and promoting cultural diversity and participation.
+- **Agriculture**: Support for agriculture-related projects.
+
+
+### What filters are available?
+
+The Förderdatenbank provides a range of intuitive filters.
+
+- **Funding area**: Specifies the state for which the funding is available.
+- **GRW Funding Programs**: Refers to the funding programs supported by the Gemeinschaftsaufgabe "Verbesserung der regionalen Wirtschaftsstruktur" (GRW) (Joint Task for the Improvement of Regional Economic Structures), which aim to promote economic development in specific regions of Germany. The user can either select GRW or non-GRW funding programs.
+- **Funding Area**: Indicates the specific field or sector. Options are areas similar to the ones listed above, however more granular.
+- **Eligible Beneficiaries**: Specifies the types of entities or individuals that are eligible to apply for the funding program, such as educational institution, entrepreneur or business.
+- **Type of Funding**: Describes the type of financial support provided by the funding program, such as grants, loans, or guarantees.
+- **Funding Provider**: Identifies the institution responsible for providing the funding, including the EU, Germany or a state.
+- **Company Size**:  Refers to the size of the company, often categorized by the number of employees.
+- **Format**:  This filter currently only contains the option funding program but is expected to be extended.
+
+### What details does the platform provide about funding opportunities?
+
+The platform offers a wide range of information about funding opportunities. In the following, we will explain all provided details.
+
+- **Value of each Filter**: First, the values for the filters above are given.
+- **Short text**: Outlines the program in one or two sentences.
+- **Long text**: Explains the program in more detail and may differ between programs.
+- **Additional Information**: Describes further details, such as eligibility criterias.
+- **Value**: Describes what the program offers. This may include payments or other support.
+- **Legal Basis**: Refers to the underlying legislation that establishes the authority for the program.
+
+### What are the advantages and disadvantages of the platform?
+
+#### Advantages
+Compared to the previous platforms, the Förderdatenbank provides a useful search engine that allows filtering by keywords in the full text of each program.
+Furthermore, the interface is well structured and the process of finding matching programs is less time-consuming as on the other platforms. 
+
+#### Disadvantages
+Nevertheless, the Förderdatenbank fails to provide programs that do not contain the given keyword. Additionally, the platform is only available in German, making it inaccessible for ones that are less fluent with the language.
+
+<br></br>
+<br></br>
+
+# Discussion
+The analysis of the three given databases for funding opportunities has provided us with insightful details.
+Across all databases, it was difficult to navigate through the large amount of programs and find ones whose criterias are matched. 
+This is made even worse by the fact that a user would need to go through all databases to find the best funding opportunities.<br></br>
+Fun<sub>2</sub>ding solves those issues by letting the user input a full text while maintaining the option to filter programs. At the same time, all funding opportunities are now aggregated at one place, making the whole process as little time-consuming as possible for the user.
+Surely, Fun<sub>2</sub>ding will not replace other databases. For this reason, we equip you with the option to open a discovered program in its original database via a link, to then get started with the application process.
+We aim to facilitate the initial step of finding a funding opportunity.
