docs: add interface documentation

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,11 +1,7 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+In the recent years, funding through public institutions has become increasingly popular.
+While internet technologies contributed to this process, it is yet complicated and time-consuming to find desired funding programs. This can mostly be reasoned with the use of old search engine technologies by the public institutions issuing the funding. Furthermore, the existence of a wide range of such institutions, each having their own database, adds to the problem.
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+We aim to simplify the search for funding programs, by implementing an AI assisted search engine that aggregates data from multiple public institutions.
+This search engine will be based on vector embeddings created with [OpenAI's GPT3](https://openai.com/) and feature an intuitive interface built with [Next.js](https://nextjs.org/).
