docs: wip architecture

--- a/apps/docs/pages/architecture.mdx
+++ b/apps/docs/pages/architecture.mdx
@@ -2,7 +2,7 @@ import Image from 'next/image';
 
 # Architecture
 
-diagram:
+![Funding Architecture](/architecture.png)
 
 ## Repository Structure
 
