docs: extend contributing

--- a/apps/docs/pages/contributing.mdx
+++ b/apps/docs/pages/contributing.mdx
@@ -25,7 +25,7 @@ All types of contributions are encouraged and valued. See the [Table of Contents
 
 ## I Have a Question
 
-> If you want to ask a question, we assume that you have read the available [Documentation](https://github.com/Code42Cate/funding/tree/main/apps/docs).
+> If you want to ask a question, we assume that you have read the available [Documentation](https://docs.funding.nplusone.studio).
 
 Before you ask a question, it is best to search for existing [Issues](https://github.com/Code42Cate/funding/issues) that might help you. In case you have found a suitable issue and still need clarification, you can write your question in this issue. It is also advisable to search the internet for answers first.
 
@@ -62,7 +62,7 @@ A good bug report shouldn't leave others needing to chase you up for more inform
 
 #### How Do I Submit a Good Bug Report?
 
-> You must never report security related issues, vulnerabilities or bugs including sensitive information to the issue tracker, or elsewhere in public. Instead sensitive bugs must be sent by email to .
+> You must never report security related issues, vulnerabilities or bugs including sensitive information to the issue tracker, or elsewhere in public. Instead sensitive bugs must be sent by [email](mailto:ubvja@student.kit.edu).
 
 We use GitHub issues to track bugs and errors. If you run into an issue with the project:
 
@@ -79,7 +79,7 @@ Once it's filed:
 
 ### Suggesting Enhancements
 
-This section guides you through submitting an enhancement suggestion for Fun2ding, **including completely new features and minor improvements to existing functionality**. Following these guidelines will help maintainers and the community to understand your suggestion and find related suggestions.
+This section guides you through submitting an enhancement suggestion for Fun<sub>2</sub>ding, **including completely new features and minor improvements to existing functionality**. Following these guidelines will help maintainers and the community to understand your suggestion and find related suggestions.
 
 #### Before Submitting an Enhancement
 
@@ -100,35 +100,18 @@ Enhancement suggestions are tracked as [GitHub issues](https://github.com/Code42
 
 ### Your First Code Contribution
 
-### Improving The Documentation
+If you want to contribute by writing code, please first open an Issue to ensure that the feature is wanted.
+You should also follow our code style...
 
 ## Styleguides
 
 ### Commit Messages
 
-_This specification is inspired by and supersedes the [AngularJS commit message format][commit-message-format]._
-
-We have very precise rules over how our Git commit messages must be formatted.
+We have very precise rules over how our Git commit messages must be formatted and follow the [Conventional Commits](https://www.conventionalcommits.org/) specification.
 This format leads to **easier to read commit history**.
 
-Each commit message consists of a **header**, a **body**, and a **footer**.
 
-```
-<header>
-<BLANK LINE>
-<body>
-<BLANK LINE>
-<footer>
-```
-
-The `header` is mandatory and must conform to the [Commit Message Header](#commit-header) format.
-
-The `body` is mandatory for all commits except for those of type "docs".
-When the body is present it must be at least 20 characters long and must conform to the [Commit Message Body](#commit-body) format.
-
-The `footer` is optional. The [Commit Message Footer](#commit-footer) format describes what the footer is used for and the structure it must have.
-
-#### <a name="commit-header"></a>Commit Message Header
+The commit message should be structured as follows:
 
 ```
 <type>(<scope>): <short summary>
@@ -145,8 +128,6 @@ The `footer` is optional. The [Commit Message Footer](#commit-footer) format des
 ```
 
 The `<type>` and `<summary>` fields are mandatory, the `(<scope>)` field is optional.
-
-## Join The Project Team
 
 ## Attribution
 
