docs: remove works-well

--- a/apps/docs/pages/search.mdx
+++ b/apps/docs/pages/search.mdx
@@ -10,11 +10,11 @@ Whenever a user enters a search query, the following steps are performed:
 
 ### Embedding the query
 
-The entered text is converted into an embedding vector with the [OpenAI text-embedding-ada-002 model](https://platform.openai.com/docs/guides/embeddings/what-are-embeddings). A "Embedding Vector" is a list (vector) of numerical values (1536 to be exact) that represent a specific text. We do that because it is easier to compare two vectors than two texts. There are many ways to convert text into an embedding vector, but we use the OpenAI API because it is easy to use and works well. However, it is not free and also not open-source. An alternative would be [word2vec](https://arxiv.org/abs/1301.3781), although this would just trade API cost for compute cost, since we would have to do the inference ourselves.
+The entered text is converted into an embedding vector with the [OpenAI text-embedding-ada-002 model](https://platform.openai.com/docs/guides/embeddings/what-are-embeddings). A "Embedding Vector" is a list (vector) of numerical values (1536 to be exact) that represent a specific text. We do that because it is easier to compare two vectors than two texts. There are many ways to convert text into an embedding vector, but we use the OpenAI API because it is easy to use and reduces the needed hardware resources by outsourcing the calculation to OpenAI. However, it is not free and also not open-source. An alternative would be [word2vec](https://arxiv.org/abs/1301.3781), although this would just trade API cost for compute cost, since we would have to do the inference ourselves.
 
 ### Finding the most similar vectors
 
-Each funding opportunity that we have in our database also has an embedding vector that we create the same way as we did for the query. We then compare the query vector to each of the funding opportunity vectors and calculate the similarity. The similarity is a number between -1 and 1. We then sort the funding opportunities by their similarity to the query and show the top 10 results to the user. There are many ways to calculate the similarity between two vectors, but we use the [cosine similarity](https://en.wikipedia.org/wiki/Cosine_similarity) because it is easy to calculate and works well. To make this calculation fast, we use the [pgvector](https://github.com/pgvector/pgvector) Postgres extension.
+Each funding opportunity that we have in our database also has an embedding vector that we create the same way as we did for the query. We then compare the query vector to each of the funding opportunity vectors and calculate the similarity. The similarity is a number between -1 and 1. We then sort the funding opportunities by their similarity to the query and show the top 10 results to the user. There are many ways to calculate the similarity between two vectors, but we use the [cosine similarity](https://en.wikipedia.org/wiki/Cosine_similarity) because it is supported by Postgres and [recommended by OpenAI](https://platform.openai.com/docs/guides/embeddings/which-distance-function-should-i-use). To make this calculation fast, we use the [pgvector](https://github.com/pgvector/pgvector) Postgres extension.
 
 This looks something like this in SQL:
 
