docs: adapt architecture figure

--- a/apps/docs/pages/architecture.mdx
+++ b/apps/docs/pages/architecture.mdx
@@ -2,7 +2,7 @@ import Image from 'next/image';
 
 # Architecture
 
-![Funding Architecture](/architecture.png)
+![Funding Architecture](/architecture-vertical.png)
 
 ## Repository Structure
 
